# kigezimade

./: .gitignore  README.md  check_artisan_specialties.sql  fix_craft_specialties.sql  fix_product_images_table.sql  fix_wedding_basket.sql  merge_coffee_products.sql  render.yaml  update_artisan_specialty.sql  update_cowhide_to_papyrus.sql  update_earrings_images.sql  update_musanana_ebyanzi.sql
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_product_images.sql  004_artisan_auth.sql  005_orders_enhanced.sql  006_enhancements.sql  007_fix_image_urls.sql
backend/src/: cache.rs  db.rs  email.rs  error.rs  images.rs  main.rs  middleware.rs
backend/src/ai/: groq_client.rs  mod.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/models/: artisan.rs  mod.rs  order.rs  product.rs  product_image.rs  story.rs
backend/src/routes/: ai.rs  artisans.rs  auth.rs  dashboard.rs  mod.rs  orders.rs  products.rs  reports.rs
frontend/: index.html  package-lock.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ArtisanCard.jsx  Button.jsx  DisplayHeadline.jsx  DistrictExplore.jsx  Footer.jsx  HeroSlider.jsx  HowToBuy.jsx  ImageCarousel.jsx  ImageUploader.jsx  Navbar.jsx  ProductCard.jsx  ShareButtons.jsx
frontend/src/lib/: api.js  i18n.jsx  images.js  orders.js  session.js
frontend/src/pages/: ArtisanDashboard.jsx  ArtisanProfile.jsx  CraftTrails.jsx  Explore.jsx  ForgotPassword.jsx  Home.jsx  Impact.jsx  Login.jsx  Marketplace.jsx  Register.jsx  (+3 more)
